--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>place-fe</title>
+    <title>Places</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div style="width: 100%;" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
