--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Places</title>
   </head>
   <body>
-    <div style="width: 100%;" id="root"></div>
+    <div style="width: 100%" id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
